Whitespace fix

--- a/src/css/_card.less
+++ b/src/css/_card.less
@@ -9,7 +9,7 @@
     color: @primary-color;
 
     svg { width: auto; }
-    &--text { font-size: 2.75rem; font-weight: bold; user-select: none; height: auto; }
+    &--text { font-size: 2.75rem; font-weight: bold; user-select: none; height: auto; line-height: 1; }
   }
 
   &__title {
